platform/ingresses/policy-reporter-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: policy-reporter
  namespace: kyverno
  annotations:
    argocd.argoproj.io/sync-wave: "10"
spec:
  ingressClassName: nginx
  rules:
    - host: policy-reporter.platform.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: policy-reporter-ui
                port:
                  number: 8080
